docs: update code explanation

--- a/project/project_6/project_6_starter.ipynb
+++ b/project/project_6/project_6_starter.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Project 6: Sentiment Analysis with Neural Networks\n",
     "## Instructions\n",
@@ -12,13 +11,12 @@
     "When you implement the functions, you'll only need to you use the packages you've used in the classroom, like [Pandas](https://pandas.pydata.org/) and [Numpy](http://www.numpy.org/). These packages will be imported for you. We recommend you don't add any import statements, otherwise the grader might not be able to run your code.\n",
     "\n",
     "### Load Packages"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import json\n",
     "import nltk\n",
@@ -29,11 +27,12 @@
     "\n",
     "from torch import nn, optim\n",
     "import torch.nn.functional as F"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Introduction\n",
     "When deciding the value of a company, it's important to follow the news. For example, a product recall or natural disaster in a company's product chain. You want to be able to turn this information into a signal. Currently, the best tool for the job is a Neural Network. \n",
@@ -65,61 +64,61 @@
     "\n",
     "\n",
     "To see what the data look like by printing the first 10 twits from the list. "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "with open(os.path.join('..', '..', 'data', 'project_6_stocktwits', 'twits.json'), 'r') as f:\n",
     "    twits = json.load(f)\n",
     "\n",
     "print(twits['data'][:10])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Length of Data\n",
     "Now let's look at the number of twits in dataset. Print the number of twits below."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\"\"\"print out the number of twits\"\"\"\n",
     "\n",
     "# TODO Implement \n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Split Message Body and Sentiment Score"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "messages = [twit['message_body'] for twit in twits['data']]\n",
     "# Since the sentiment scores are discrete, we'll scale the sentiments to 0 to 4 for use in our network\n",
     "sentiments = [twit['sentiment'] + 2 for twit in twits['data']]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Preprocessing the Data\n",
     "With our data in hand we need to preprocess our text. These twits are collected by filtering on ticker symbols where these are denoted with a leader $ symbol in the twit itself. For example,\n",
@@ -135,20 +134,19 @@
     "re.sub(pattern, ' ', text)\n",
     "```\n",
     "This will substitute a space with anywhere the pattern matches in the text. Later when we tokenize the text, we'll split appropriately on those spaces."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Pre-Processing"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "nltk.download('wordnet')\n",
     "\n",
@@ -196,40 +194,40 @@
     "    tokens = pass\n",
     "    \n",
     "    return tokens"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Preprocess All the Twits \n",
     "Now we can preprocess each of the twits in our dataset. Apply the function `preprocess` to all the twit messages."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# TODO Implement\n",
     "\n",
     "tokenized = pass"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Bag of Words\n",
     "Now with all of our messages tokenized, we want to create a vocabulary and count up how often each word appears in our entire corpus. Use the [`Counter`](https://docs.python.org/3.1/library/collections.html#collections.Counter) function to count up all the tokens."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
@@ -241,23 +239,25 @@
     "# TODO: Implement \n",
     "\n",
     "bow = pass"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Frequency of Words Appearing in Message\n",
     "With our vocabulary, now we'll remove some of the most common words such as 'the', 'and', 'it', etc. These words don't contribute to identifying sentiment and are really common, resulting in a lot of noise in our input. If we can filter these out, then our network should have an easier time learning.\n",
     "\n",
-    "We also want to remove really rare words that show up in a only a few twits. Here you'll want to divide the count of each word by the number of messages. Then remove words that only appear in some small fraction of the messages."
-   ]
+    "We also want to remove really rare words that show up in a only a few twits. Here you'll want to divide the count of each word by the number of messages calculated in the code block above (i.e. `len(messages))`. Then remove words that only appear in some small fraction of the messages.\n",
+    "\n",
+    ">Note: There is not an exact number for low and high-frequency cut-offs, however there is a correct optimal range. You should ideally set up low-frequency cut-off from 0.0000002 to 0.000007 (inclusive) and high-frequency from 5 to 20 (inclusive). If the number is too big, we lose lots of important words that we can use in our data."
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Set the following variables:\n",
@@ -286,21 +286,21 @@
     "filtered_words = [word for word in freqs if (freqs[word] > low_cutoff and word not in K_most_common)]\n",
     "print(K_most_common)\n",
     "len(filtered_words) "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Updating Vocabulary by Removing Filtered Words\n",
     "Let's creat three variables that will help with our vocabulary."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Set the following variables:\n",
@@ -317,24 +317,24 @@
     "id2vocab = pass\n",
     "# tokenized with the words not in `filtered_words` removed.\n",
     "filtered = pass"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Balancing the classes\n",
     "Let's do a few last pre-processing steps. If we look at how our twits are labeled, we'll find that 50% of them are neutral. This means that our network will be 50% accurate just by guessing 0 every single time. To help our network learn appropriately, we'll want to balance our classes.\n",
     "That is, make sure each of our different sentiment scores show up roughly as frequently in the data.\n",
     "\n",
     "What we can do here is go through each of our examples and randomly drop twits with neutral sentiment. What should be the probability we drop these twits if we want to get around 20% neutral twits starting at 50% neutral? We should also take this opportunity to remove messages with length 0."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "balanced = {'messages': [], 'sentiments':[]}\n",
     "\n",
@@ -350,46 +350,47 @@
     "    elif sentiment != 2 or random.random() < keep_prob:\n",
     "        balanced['messages'].append(message)\n",
     "        balanced['sentiments'].append(sentiment) "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "If you did it correctly, you should see the following result "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "n_neutral = sum(1 for each in balanced['sentiments'] if each == 2)\n",
     "N_examples = len(balanced['sentiments'])\n",
     "n_neutral/N_examples"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Finally let's convert our tokens into integer ids which we can pass to the network."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "token_ids = [[vocab[word] for word in message] for message in balanced['messages']]\n",
     "sentiments = balanced['sentiments']"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Neural Network\n",
     "Now we have our vocabulary which means we can transform our tokens into ids, which are then passed to our network. So, let's define the network now!\n",
@@ -401,13 +402,12 @@
     "Before we build text classifier, if you remember from the other network that you built in  \"Sentiment Analysis with an RNN\"  exercise  - which there, the network called \" SentimentRNN\", here we named it \"TextClassifer\" - consists of three main parts: 1) init function `__init__` 2) forward pass `forward`  3) hidden state `init_hidden`. \n",
     "\n",
     "This network is pretty similar to the network you built expect in the  `forward` pass, we use softmax instead of sigmoid. The reason we are not using sigmoid is that the output of NN is not a binary. In our network, sentiment scores have 5 possible outcomes. We are looking for an outcome with the highest probability thus softmax is a better choice."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "class TextClassifier(nn.Module):\n",
     "    def __init__(self, vocab_size, embed_size, lstm_size, output_size, lstm_layers=1, dropout=0.1):\n",
@@ -482,20 +482,20 @@
     "        # TODO Implement \n",
     "        \n",
     "        return None, None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### View Model"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model = TextClassifier(len(vocab), 10, 6, 5, dropout=0.1, lstm_layers=2)\n",
     "model.embedding.weight.data.uniform_(-1, 1)\n",
@@ -504,24 +504,24 @@
     "\n",
     "logps, _ = model.forward(input, hidden)\n",
     "print(logps)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Training\n",
     "### DataLoaders and Batching\n",
     "Now we should build a generator that we can use to loop through our data. It'll be more efficient if we can pass our sequences in as batches. Our input tensors should look like `(sequence_length, batch_size)`. So if our sequences are 40 tokens long and we pass in 25 sequences, then we'd have an input size of `(40, 25)`.\n",
     "\n",
     "If we set our sequence length to 40, what do we do with messages that are more or less than 40 tokens? For messages with fewer than 40 tokens, we will pad the empty spots with zeros. We should be sure to **left** pad so that the RNN starts from nothing before going through the data. If the message has 20 tokens, then the first 20 spots of our 40 long sequence will be 0. If a message has more than 40 tokens, we'll just keep the first 40 tokens."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def dataloader(messages, labels, sequence_length=30, batch_size=32, shuffle=False):\n",
     "    \"\"\" \n",
@@ -549,21 +549,21 @@
     "        label_tensor = torch.tensor(labels[ii: ii+len(batch_messages)])\n",
     "        \n",
     "        yield batch, label_tensor"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Training and  Validation\n",
     "With our data in nice shape, we'll split it into training and validation sets."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Split data into training and validation datasets. Use an appropriate split size.\n",
@@ -576,46 +576,46 @@
     "valid_features = pass\n",
     "train_labels = pass\n",
     "valid_labels = pass"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "text_batch, labels = next(iter(dataloader(train_features, train_labels, sequence_length=20, batch_size=64)))\n",
     "model = TextClassifier(len(vocab)+1, 200, 128, 5, dropout=0.)\n",
     "hidden = model.init_hidden(64)\n",
     "logps, hidden = model.forward(text_batch, hidden)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Training\n",
     "It's time to train the neural network!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "model = TextClassifier(len(vocab)+1, 1024, 512, 5, lstm_layers=2, dropout=0.2)\n",
     "model.embedding.weight.data.uniform_(-1, 1)\n",
     "model.to(device)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Train your model with dropout. Make sure to clip your gradients.\n",
@@ -653,22 +653,22 @@
     "            # TODO Implement: Print metrics\n",
     "            \n",
     "            model.train()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Making Predictions\n",
     "### Prediction \n",
     "Okay, now that you have a trained model, try it on some new twits and see if it works appropriately. Remember that for any new text, you'll need to preprocess it first before passing it to the network. Implement the `predict` function to generate the prediction vector from a message."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def predict(text, model, vocab):\n",
     "    \"\"\" \n",
@@ -703,80 +703,80 @@
     "    pred = pass\n",
     "    \n",
     "    return pred"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "text = \"Google is working on self driving cars, I'm bullish on $goog\"\n",
     "model.eval()\n",
     "model.to(\"cpu\")\n",
     "predict(text, model, vocab)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Questions: What is the prediction of the model? What is the uncertainty of the prediction?\n",
     "** TODO: Answer Question**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Now we have a trained model and we can make predictions. We can use this model to track the sentiments of various stocks by predicting the sentiments of twits as they are coming in. Now we have a stream of twits. For each of those twits, pull out the stocks mentioned in them and keep track of the sentiments. Remember that in the twits, ticker symbols are encoded with a dollar sign as the first character, all caps, and 2-4 letters, like $AAPL. Ideally, you'd want to track the sentiments of the stocks in your universe and use this as a signal in your larger model(s).\n",
     "\n",
     "## Testing\n",
     "### Load the Data "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "with open(os.path.join('..', '..', 'data', 'project_6_stocktwits', 'test_twits.json'), 'r') as f:\n",
     "    test_data = json.load(f)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Twit Stream"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def twit_stream():\n",
     "    for twit in test_data['data']:\n",
     "        yield twit\n",
     "\n",
     "next(twit_stream())"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Using the `prediction` function, let's apply it to a stream of twits."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def score_twits(stream, model, vocab, universe):\n",
     "    \"\"\" \n",
@@ -792,34 +792,36 @@
     "        for symbol in symbols:\n",
     "            if symbol in universe:\n",
     "                yield {'symbol': symbol, 'score': score, 'timestamp': twit['timestamp']}"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "universe = {'$BBRY', '$AAPL', '$AMZN', '$BABA', '$YHOO', '$LQMT', '$FB', '$GOOG', '$BBBY', '$JNUG', '$SBUX', '$MU'}\n",
     "score_stream = score_twits(twit_stream(), model, vocab, universe)\n",
     "\n",
     "next(score_stream)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "That's it. You have successfully built a model for sentiment analysis! "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Submission\n",
     "Now that you're done with the project, it's time to submit it. Click the submit button in the bottom right. One of our reviewers will give you feedback on your project with a pass or not passed grade. You can continue to the next section while you wait for feedback."
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
